# cpp_demo_template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  makefile  vcpkg.json
src/: Utils.h  logger.cpp  logger.h  main.cpp  utils.h
